# backend/swagger.openapi.yaml
@@ -235,12 +235,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Competence'
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
 
     put:
       tags: [Competences]
@@ -257,18 +251,6 @@ paths:
       responses:
         '200':
           description: Modifiée
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
-        '409':
-          description: Modification rejetée
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AventurierProblemDetail'
 
     delete:
       tags: [Competences]
@@ -279,12 +261,6 @@ paths:
       responses:
         '204':
           description: Supprimée
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
 
   ########################
   # ASSOCIATION
@@ -313,12 +289,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Competence'
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
 
   /api/v1/aventuriers/{id}/competences/{cId}:
     parameters:
@@ -343,18 +313,6 @@ paths:
       responses:
         '204':
           description: Ajoutée
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
-        '422':
-          description: Prérequis manquant(s)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AventurierProblemDetail'
 
     delete:
       tags: [Competences]
@@ -365,18 +323,6 @@ paths:
       responses:
         '204':
           description: Retirée
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
-        '409':
-          description: Suppression impossible
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CompetenceProblemDetail'
 
   ########################
   # VUES
@@ -403,12 +349,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CompetencesDisponiblesResult'
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
 
   /api/v1/competences/{id}/aventuriers:
     parameters:
@@ -431,12 +371,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AventuriersParCompetenceResponse'
-        '404':
-          description: Ressource introuvable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetail'
 
 
 components:
@@ -545,7 +479,7 @@ components:
           items:
             $ref: '#/components/schemas/Competence'
 
-    ProblemDetail:
+    ErrorDetail:
       type: object
       properties:
         type:
@@ -556,26 +490,22 @@ components:
           type: integer
         detail:
           type: string
-
-    AventurierProblemDetail:
-      allOf:
-        - $ref: '#/components/schemas/ProblemDetail'
-        - type: object
-          properties:
-            prerequisManquants:
-              type: array
-              items:
-                type: object
-
-    CompetenceProblemDetail:
-      allOf:
-        - $ref: '#/components/schemas/ProblemDetail'
-        - type: object
-          properties:
-            aventurierImpacté:
-              type: array
-              items:
-                type: object
+        aventuriersImpactes:
+          type: array
+          items:
+            type: object
+        prerequisManquants:
+          type: array
+          items:
+            type: object
+    Erreur:
+      type: object
+      required: [ statut, message ]
+      properties:
+        statut:
+          type: integer
+        message:
+          type: string
 
   responses:
     RequeteInvalide:
@@ -583,26 +513,26 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ProblemDetail'
+            $ref: '#/components/schemas/Erreur'
     NonTrouve:
       description: Ressource introuvable
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ProblemDetail'
+            $ref: '#/components/schemas/Erreur'
     ErreurServeur:
       description: Erreur serveur
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ProblemDetail'
+            $ref: '#/components/schemas/Erreur'
 
     Unauthorized:
       description: Non authentifié
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ProblemDetail'
+            $ref: '#/components/schemas/ErrorDetail'
 
     BadRequest:
       description: Requête invalide
@@ -615,11 +545,11 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ProblemDetail'
+            $ref: '#/components/schemas/ErrorDetail'
 
     UnprocessableEntity:
       description: Pré-requis non satisfaits
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ProblemDetail'
+            $ref: '#/components/schemas/ErrorDetail'
